[package]
name = "gis"
version = "0.1.0"
edition = "2021"
author = "Caelestis94"
description = "This command line tool is used to switch between different git identities."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive","cargo"] }
directories = "5.0.0"
md5 = "0.7.0"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
